--- a/src/less/style.less
+++ b/src/less/style.less
@@ -1,81 +1,80 @@
 //reset
 * {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font-weight: normal;
-    line-height: 1;
-    font-family: inherit;
-    vertical-align: baseline;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font-weight: normal;
+  line-height: 1;
+  font-family: inherit;
+  vertical-align: baseline;
+  box-sizing: border-box;
+  color: inherit;
+  background-color: transparent;
+
+  &:before,
+  &:after {
     box-sizing: border-box;
-    color: inherit;
-    background-color: transparent;
-  
-    &:before,
-    &:after {
-      box-sizing: border-box;
-    }
   }
-  
-  html {
-    font-size: 16px;
-    -webkit-text-size-adjust: 100%;
-    -ms-text-size-adjust: 100%;
-  }
-  
-  body {
-    font-family: Arial, sans-serif;
-    font-size: 1rem;
-    line-height: 1.5;
-    color: #333;
-    background-color: #fff;
-  }
-  
-  // flashcards
-  .flashcard {
-  &__text {
-    font-size: 20px;
-    font-weight: bold;
-  }
+}
+
+html {
+  font-size: 16px;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+}
+
+body {
+  font-family: Arial, sans-serif;
+  font-size: 1rem;
+  line-height: 1.5;
+  color: #333;
+  background-color: #fff;
+}
+
+/* Block: Flashcards */
+#flashcards-container {
+}
+
+/* Element: Container */
+#flashcards__container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 1rem;
+  margin-top: 1rem;
+}
+
+/* Element: Card */
+.flashcards__card {
+  position: relative;
+  width: 300px;
+  height: 200px;
+  background-color: white;
+  border: 1px solid #ccc;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+  transition: 0.5s;
+  transform-style: preserve-3d;
+  padding: 20px;
+  text-align: center;
 
   &--question {
-    width: 300px;
-    height: 200px;
-    background-color: white;
-    border: 2px solid black;
-    border-radius: 10px;
-    padding: 20px;
-    margin-bottom: 20px;
-    position: relative;
-
-    &::before {
-      content: "Question:";
-    }
-
-    &.flipped {
-      & .flashcard__text--question {
-        display: none;
-      }
-
-      & .flashcard__text--answer {
-        display: block;
-      }
-    }
+  }
+  &--answer {
+    transform: rotateY(180deg);
+    display: none;
   }
 
-  &--answer {
-    display: none;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: white;
+  &.flipped {
     transform: rotateY(180deg);
-
-    &::before {
-      content: "Answer:";
+    .flashcards__card {
+      &--question {
+        display: none;
+      }
+      &--answer {
+        display: block;
+      }
     }
   }
 }
