update with comments to the main.js file

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -94,6 +94,7 @@ h1,h2,h3,h4,h5,h6 {
 
   &.flipped {
     transform: rotateY(180deg);
+    // reffering to original block
     .flashcards__card {
       &--question {
         display: none;
