--- a/src/less/style.less
+++ b/src/less/style.less
@@ -30,29 +30,34 @@ body {
   font-size: 1rem;
   line-height: 1.5;
   color: #333;
-  background-color: #fff;
-  font-family: 'Open Sans', sans-serif;
+  background-color: #f5f5f5;
+  font-family: "Open Sans", sans-serif;
   font-weight: 400; /* normal */
 }
-h1,h2,h3,h4,h5,h6 {
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 700; /* bold */
-  }
-  /* Block: Nav */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Open Sans", sans-serif;
+  font-weight: 700; /* bold */
+}
+/* Block: Nav */
 .navbar {
-    background-color: #000;
-    text-align: center;
-    padding: 20px;
-    color: #fff;
-    margin-bottom: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-    img {
-        width: 40px;
-        height: 40px;
-    }
+  background-color: #000;
+  text-align: center;
+  padding: 20px;
+  color: #fff;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  img {
+    width: 40px;
+    height: 40px;
+  }
 }
 
 /* Block: Flashcards */
@@ -104,4 +109,25 @@ h1,h2,h3,h4,h5,h6 {
       }
     }
   }
+}
+
+/* Block: Footer */
+.footer {
+    background-color: #000;
+    color: #fff;
+    padding: 40px 0;
+    h3 {
+        margin-bottom: 10px;
+    }
+    ul {
+        margin: 0 0 0 20px;
+        padding: 0;
+    }
+.footer__container {
+  max-width: 1200px;
+  padding: 0 20px;
+    &--column {
+    }
+
+}
 }
