--- a/src/less/style.less
+++ b/src/less/style.less
@@ -81,12 +81,12 @@ h6 {
   width: 300px;
   height: 200px;
   background-color: white;
-  border: 1px solid #ccc;
-  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 15px 35px rgba(50,50,93,.1),0 5px 15px rgba(0,0,0,.07)!important;
+  border-radius: 0.25rem;
   cursor: pointer;
   transition: 0.5s;
   transform-style: preserve-3d;
-  padding: 20px;
+  padding: 2rem;
   text-align: center;
 
   &--question {
