--- a/src/less/style.less
+++ b/src/less/style.less
@@ -81,7 +81,7 @@ h6 {
   width: 300px;
   height: 200px;
   background-color: white;
-  box-shadow: 0 15px 35px rgba(50,50,93,.1),0 5px 15px rgba(0,0,0,.07)!important;
+  box-shadow: 0 15px 35px rgba(50, 50, 93, 0.1), 0 5px 15px rgba(0, 0, 0, 0.07) !important;
   border-radius: 0.25rem;
   cursor: pointer;
   transition: 0.5s;
@@ -113,21 +113,20 @@ h6 {
 
 /* Block: Footer */
 .footer {
-    background-color: #000;
-    color: #fff;
-    padding: 40px 0;
-    h3 {
-        margin-bottom: 10px;
-    }
-    ul {
-        margin: 0 0 0 20px;
-        padding: 0;
-    }
-.footer__container {
-  max-width: 1200px;
-  padding: 0 20px;
+  background-color: #000;
+  color: #fff;
+  padding: 40px 0;
+  h3 {
+    margin-bottom: 10px;
+  }
+  ul {
+    margin: 0 0 0 20px;
+    padding: 0;
+  }
+  .footer__container {
+    max-width: 1200px;
+    padding: 0 20px;
     &--column {
     }
-
-}
+  }
 }
