--- a/src/less/style.less
+++ b/src/less/style.less
@@ -79,7 +79,6 @@ h6 {
 .flashcards__card {
   position: relative;
   width: 300px;
-  height: 200px;
   background-color: white;
   box-shadow: 0 15px 35px rgba(50, 50, 93, 0.1), 0 5px 15px rgba(0, 0, 0, 0.07) !important;
   border-radius: 0.25rem;
@@ -100,6 +99,7 @@ h6 {
   &.flipped {
     transform: rotateY(180deg);
     // reffering to original block
+    border: 5px solid green;
     .flashcards__card {
       &--question {
         display: none;
